<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/register_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarTheme"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/register">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            app:hintEnabled="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_toolbar">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_phone"
                android:inputType="number"
                android:maxLines="1"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintEnabled="false"
            app:layout_constraintLeft_toLeftOf="@id/til_phone"
            app:layout_constraintRight_toRightOf="@id/til_phone"
            app:layout_constraintTop_toBottomOf="@id/til_phone"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_pwd"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="20sp"
                app:passwordToggleEnabled="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_pwd2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="@id/til_phone"
            app:layout_constraintRight_toRightOf="@id/til_phone"
            app:layout_constraintTop_toBottomOf="@id/til_pwd"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_pwd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_pwd2"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_button"
            android:text="@string/register"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_pwd2" />

    </android.support.constraint.ConstraintLayout>
</layout>